--- a/app/index.html
+++ b/app/index.html
@@ -42,16 +42,15 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/">Contact</a></li>
-              <li><a ng-href="#/simon">simon</a></li>
             </ul>
           </div>
         </div>
       </div>
     </div>
 
-    
+    <div class="container">
     <div ng-view=""></div>
-    
+    </div>
 
     <div class="footer">
       <div class="container">
@@ -89,7 +88,6 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/simon.js"></script>
         <!-- endbuild -->
 </body>
 </html>
